--- a/force-app/main/default/classes/SummitEventsContactMatchingTest.cls
+++ b/force-app/main/default/classes/SummitEventsContactMatchingTest.cls
@@ -5,8 +5,9 @@ public class SummitEventsContactMatchingTest {
         Summit_Events__c event = new Summit_Events__c();
         event.Name = 'Test event';
         event.Contact_Matching_Rules__c = 'Matching rules 1';
+        event.Custom_Metadata_Contact_Matching_Method__c = 'Admissions';
         insert event;
-
+        
         Summit_Events_Instance__c instance = new Summit_Events_Instance__c();
         instance.Event__c = event.Id;
         instance.Instance_Start_Date__c = System.today();
@@ -15,7 +16,7 @@ public class SummitEventsContactMatchingTest {
         instance.Instance_End_Time__c = Time.newInstance(23,59,59,0);
         instance.Active_Status__c = 'Active';
         insert instance;
-
+        
         Summit_Events_Registration__c registration = new Summit_Events_Registration__c();
         registration.Event__c = event.Id;
         registration.Event_Instance__c = instance.Id;
@@ -25,27 +26,28 @@ public class SummitEventsContactMatchingTest {
         registration.Registrant_Email__c = 'test@example.com';
         registration.Registrant_Preferred_First_Name__c = 'Big T';
         insert registration;
-
+        
         registration.Contact__c = null;
         registration.Registrant_Date_of_Birth__c = System.today();
         update registration;
-
+        
         registration.Contact__c = null;
         registration.Registrant_First_Name__c = 'Tester';
         update registration;
-
+        
         registration.Contact__c = null;
         registration.Registrant_Phone__c = '1234567890';
         update registration;
     }
-
+    
     @isTest
     static void SummitEventsContactMatching2(){
         Summit_Events__c event = new Summit_Events__c();
         event.Name = 'Test event';
         event.Contact_Matching_Rules__c = 'Matching rules 2';
+        event.Custom_Metadata_Contact_Matching_Method__c = 'Admissions';
         insert event;
-
+        
         Summit_Events_Instance__c instance = new Summit_Events_Instance__c();
         instance.Event__c = event.Id;
         instance.Instance_Start_Date__c = System.today();
@@ -54,7 +56,7 @@ public class SummitEventsContactMatchingTest {
         instance.Instance_End_Time__c = Time.newInstance(23,59,59,0);
         instance.Active_Status__c = 'Active';
         insert instance;
-
+        
         Summit_Events_Registration__c registration = new Summit_Events_Registration__c();
         registration.Event__c = event.Id;
         registration.Event_Instance__c = instance.Id;
@@ -64,28 +66,29 @@ public class SummitEventsContactMatchingTest {
         registration.Registrant_Email__c = 'test@example.com';
         registration.Registrant_Preferred_First_Name__c = 'Big T';
         insert registration;
-
+        
         registration.Contact__c = null;
         registration.Registrant_Date_of_Birth__c = null;
         update registration;
-
+        
         registration.Contact__c = null;
         registration.Registrant_First_Name__c = 'Tester';
         update registration;
-
+        
         registration.Contact__c = null;
         registration.Registrant_Phone__c = '1234567890';
         update registration;
     }
-
+    
     @isTest
     static void SummitEventsContactMatching3(){
         Summit_Events__c event = new Summit_Events__c();
         event.Name = 'Test event';
         event.Contact_Matching_Rules__c = 'Use Salesforce Duplicate Rule';
         event.Contact_Creation_Duplicate_Rule__c = 'Summit Events Contact Creation';
+        event.Custom_Metadata_Contact_Matching_Method__c = 'Admissions';
         insert event;
-
+        
         Summit_Events_Instance__c instance = new Summit_Events_Instance__c();
         instance.Event__c = event.Id;
         instance.Instance_Start_Date__c = System.today();
@@ -94,7 +97,7 @@ public class SummitEventsContactMatchingTest {
         instance.Instance_End_Time__c = Time.newInstance(23,59,59,0);
         instance.Active_Status__c = 'Active';
         insert instance;
-
+        
         Summit_Events_Registration__c registration = new Summit_Events_Registration__c();
         registration.Event__c = event.Id;
         registration.Event_Instance__c = instance.Id;
@@ -104,10 +107,10 @@ public class SummitEventsContactMatchingTest {
         registration.Registrant_Email__c = 'test@example.com';
         registration.Registrant_Preferred_First_Name__c = 'Big T';
         insert registration;
-
+        
         registration.Contact__c = null;
         update registration;
-
+        
         registration.Contact__c = null;
         update registration;
     }
